Melhorias diversas na geração de miniaturas de vídeo.